# my_vins-v1

./: .gitignore  README.md  origin_pidstat.txt  rewrite_pidstat.txt
src/camera_model/: CMakeLists.txt
src/camera_model/src/calib/: CameraCalibration.cc
src/config/euroc/: euroc_config.yaml
src/config/realsense/: realsense_d435i_config.yaml
src/feature_tracker/launch/: euroc_feature_only.launch
src/feature_tracker/src/: feature_tracker_rewrite.cpp
src/my_vins_estimator/: CMakeLists.txt  package.xml
src/my_vins_estimator/config/: euroc_my_estimator.yaml
src/my_vins_estimator/include/my_vins_estimator/: estimator.h  feature_manager.h  imu_factor.h  initial_alignment.h  initial_sfm.h  integration_base.h  marginalization_factor.h  parameters.h  pose_local_parameterization.h  projection_factor.h  projection_td_factor.h  solve_5pts.h  utility.h
src/my_vins_estimator/launch/: euroc_my_estimator.launch
src/my_vins_estimator/src/: estimator.cpp  estimator_node.cpp  feature_manager.cpp  initial_alignment.cpp  initial_sfm.cpp  marginalization_factor.cpp  parameters.cpp  pose_local_parameterization.cpp  projection_factor.cpp  projection_td_factor.cpp  solve_5pts.cpp
src/pose_graph/: CMakeLists.txt
src/vins_estimator/: CMakeLists.txt
src/vins_estimator/launch/: euroc.launch
src/vins_estimator/src/: estimator.cpp  estimator.h
